Move all tests to NYPLOAuthWebFlowExample scheme

--- a/NYPLOAuthWebFlow.xcodeproj/xcshareddata/xcschemes/NYPLOAuthWebFlowExample.xcscheme
+++ b/NYPLOAuthWebFlow.xcodeproj/xcshareddata/xcschemes/NYPLOAuthWebFlowExample.xcscheme
@@ -20,21 +20,36 @@
                ReferencedContainer = "container:NYPLOAuthWebFlow.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "NO"
+            buildForProfiling = "NO"
+            buildForArchiving = "NO"
+            buildForAnalyzing = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "2D3726BC1F1E9F1A0063E9FB"
+               BuildableName = "NYPLOAuthWebFlowExampleTests.xctest"
+               BlueprintName = "NYPLOAuthWebFlowExampleTests"
+               ReferencedContainer = "container:NYPLOAuthWebFlow.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
       </BuildActionEntries>
    </BuildAction>
    <TestAction
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      shouldUseLaunchSchemeArgsEnv = "YES">
+      shouldUseLaunchSchemeArgsEnv = "YES"
+      codeCoverageEnabled = "YES">
       <Testables>
          <TestableReference
             skipped = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "2D3726E41F1EAB570063E9FB"
-               BuildableName = "NYPLOAuthWebFlowDemoTests.xctest"
-               BlueprintName = "NYPLOAuthWebFlowDemoTests"
+               BlueprintIdentifier = "2D3726BC1F1E9F1A0063E9FB"
+               BuildableName = "NYPLOAuthWebFlowExampleTests.xctest"
+               BlueprintName = "NYPLOAuthWebFlowExampleTests"
                ReferencedContainer = "container:NYPLOAuthWebFlow.xcodeproj">
             </BuildableReference>
          </TestableReference>
